--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="main-content">
       <div class="profile-pic">
-        <img src="ashik.jpg.jpeg" alt="Profile Picture">
+        <img src="ashik.jpeg" alt="Profile Picture">
       </div>
       <div class="intro-text">
         <p>Hi There...</p>
